fix: 修复双人模式结束条件和平台边缘反弹，P2改为紫色

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       PLATFORM: '#4a4a6a',
       PLATFORM_EDGE: '#6a6a8a',
       PLAYER_COLORS: [
-        '#FF6B6B', '#4ECDC4', '#45B7D1', '#96CEB4',
+        '#FF6B6B', '#9400D3', '#45B7D1', '#96CEB4',
         '#FFEAA7', '#DDA0DD', '#98D8C8', '#F7DC6F',
         '#BB8FCE', '#85C1E9', '#F8B500', '#00CED1'
       ],
@@ -524,6 +524,22 @@
             }
           }
         }
+        
+        // 平台边缘反弹
+        if (this.y > platTop - this.radius * 2) {
+          // 左边缘反弹
+          if (this.x - this.radius < platLeft && this.vx < 0) {
+            this.x = platLeft + this.radius;
+            this.vx = -this.vx * CONFIG.BOUNCE;
+            soundManager.playHit();
+          }
+          // 右边缘反弹
+          if (this.x + this.radius > platRight && this.vx > 0) {
+            this.x = platRight - this.radius;
+            this.vx = -this.vx * CONFIG.BOUNCE;
+            soundManager.playHit();
+          }
+        }
       }
 
       handleObstacleCollision(obstacles) {
@@ -641,7 +657,7 @@
       drawPlayerIndicator(ctx) {
         const starY = -this.radius - 25;
         const label = this.playerId === 1 ? 'P1' : 'P2';
-        const labelColor = this.playerId === 1 ? '#FF6B6B' : '#4ECDC4';
+        const labelColor = this.playerId === 1 ? '#FF6B6B' : '#9400D3';
         
         ctx.save();
         ctx.translate(0, starY);
@@ -1048,7 +1064,7 @@
             const y = this.platform.y - this.platform.height/2 - 100;
             const player = new JellyPlayer(
               x, y, 
-              i === 0 ? '#FF6B6B' : '#4ECDC4',
+              i === 0 ? '#FF6B6B' : '#9400D3',
               true
             );
             player.playerId = i + 1;
@@ -1159,11 +1175,11 @@
         }
 
         // 检查游戏结束条件
-        const playerAlive = this.players.filter(p => p.isAlive && p.isPlayer).length;
+        const playerAlive = this.players.filter(p => p.isAlive && p.playerId > 0).length;
         if (playerAlive === 0) {
           this.state = GameState.GAME_OVER;
           soundManager.playFall();
-        } else if (alivePlayers.length === 1 && alivePlayers[0].isPlayer) {
+        } else if (alivePlayers.length === 1 && alivePlayers[0].playerId > 0) {
           if (this.round >= 10) {
             this.levelName = '🎉 通关成功！';
           } else {
@@ -1174,7 +1190,7 @@
         } else if (this.timeLeft <= 0) {
           // 时间到，活到最后的玩家获胜
           const winner = this.players.filter(p => p.isAlive)[0];
-          if (winner && winner.isPlayer) {
+          if (winner && winner.playerId > 0) {
             if (this.round >= 10) {
               this.levelName = '🎉 通关成功！';
             } else {
